# another-heart-rate-project

./: README.md
SensingMyselfDevice/HeartRate4/: HeartRate4.c  HeartRate4.vcxproj  HeartRate4.vcxproj.filters  max30102.c
SensingMyselfDevice/SensingMyselfDevice/: CMakeLists.txt  CMakeSettings.json  SensingMyselfDevice.vcxproj  SensingMyselfDevice.vcxproj.filters  app_manifest.json  azure_iot_utilities.c  connection_strings.h  main.c  mt3620_avnet_dev.h  oledc_driver.c  oledc_driver.h  oledc_hal.c  oledc_hal.h  pictures.h
SensingMyselfWindows/DataPlaneClient/: DataPlaneClient.csproj  Readme.md  packages.config
SensingMyselfWindows/SensingMyself/: SensingMyself.sln
SensingMyselfWindows/SensingMyself/SensingMyself/: About.Designer.cs  About.cs  About.resx  App.config  HeartService.cs  Program.cs  Reading.cs  SensingMyself.csproj  Today.Designer.cs  Today.cs  packages.config
SensingMyselfWindows/SensingMyself/SensingMyself/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
